<resources>
    <string name="app_name">QRDoc</string>
    <string name="btn_qr">QR</string>
    <string name="btn_next">Next</string>
    <string name="btn_acc">Account</string>
    <string name="title_activity_settings">SettingsActivity</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="AccName">Account Name</string>
    <string name="AccEmail">Account Email</string>
    <string name="AccId">Account Id</string>
    <string name="sign_out_button">Sign Out</string>
    <string name="disconnect_button">Disconnect</string>
</resources>